# optimization-methods-research

./: README.md
gradient-descent-research/: pyproject.toml
gradient-descent-research/gradient_methods/experiments/: constants.py  data_objects.py  functional.py  hessian_check.py  mean_iterations_over_groups.py  mean_precision_over_dim.py  mean_precision_over_groups.py  run_all_experiments.py  test_functions.py  testfile.py
gradient-descent-research/gradient_methods/methods/: __init__.py  abstract_methods.py  broyden.py  cgd.py  dfp.py  functional.py  method_template.py  newton.py  old_code.py
gradient-descent-research/gradient_methods/visualizations/: __init__.py  visualization_3d.py
gradient-descent-research/notebooks/: Coursework_Lazor.ipynb
