[project]
name = "gradient-methods-research"
version = "0.1.0"
description = "Research on gradient-based optimization methods"
authors = [
    {name = "Volodymyr Lazor",email = "volodymyrlazor.appmath@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "sympy (>=1.13.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
